--- a/over.html
+++ b/over.html
@@ -9,20 +9,22 @@
         :root {
             --primary: #22c55e;
             --primary-dark: #16a34a;
-            --secondary: #64748b;
-            --bg-dark: #0f172a;
-            --bg-card: #1e293b;
-            --bg-surface: #334155;
-            --text-primary: #f8fafc;
-            --text-secondary: #cbd5e1;
-            --text-muted: #94a3b8;
-            --border: #374151;
+            --secondary: #6b7280;
+            --bg-primary: #0f1a2c;
+            --bg-card: #1e2a44;
+            --bg-surface: #24364a;
+            --text-primary: #ffffff;
+            --text-secondary: #d1d5db;
+            --text-muted: #9ca3af;
+            --border: #2d4060;
             --success: #10b981;
             --warning: #f59e0b;
             --danger: #ef4444;
             --info: #3b82f6;
-            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            --radius: 8px;
+            --shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            --radius: 10px;
+            --font-size-base: 1rem;
+            --spacing: 1rem;
         }
 
         * {
@@ -33,25 +35,25 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: var(--bg-dark);
+            background: linear-gradient(135deg, #0f1a2c 0%, #1e2a44 100%);
             color: var(--text-primary);
             line-height: 1.6;
             min-height: 100vh;
-            padding: 20px;
+            padding: var(--spacing);
         }
 
         .container {
-            max-width: 100%;
+            max-width: 1400px;
             width: 100%;
             margin: 0 auto;
-            padding: 0 10px;
+            padding: 0 var(--spacing);
         }
 
         header {
             background: var(--bg-surface);
             border-radius: var(--radius);
-            padding: 1rem;
-            margin-bottom: 1.5rem;
+            padding: var(--spacing);
+            margin-bottom: var(--spacing);
             box-shadow: var(--shadow);
             display: flex;
             align-items: center;
@@ -67,20 +69,20 @@
         }
 
         .logo-img {
-            width: 35px;
-            height: 35px;
-            border-radius: 4px;
+            width: 40px;
+            height: 40px;
+            border-radius: 6px;
         }
 
         .logo-text {
-            font-size: 1.3rem;
-            font-weight: 600;
+            font-size: 1.4rem;
+            font-weight: 700;
             color: var(--primary);
         }
 
         h1 {
-            font-size: 1.5rem;
-            font-weight: 600;
+            font-size: 1.8rem;
+            font-weight: 700;
         }
 
         .button-group {
@@ -89,16 +91,16 @@
         }
 
         .btn {
-            padding: 0.6rem 1rem;
+            padding: 0.75rem 1.5rem;
             border: none;
             border-radius: var(--radius);
-            font-weight: 500;
-            font-size: 0.85rem;
+            font-weight: 600;
+            font-size: 1rem;
             cursor: pointer;
-            transition: background 0.2s;
+            transition: background 0.3s, transform 0.1s;
             display: flex;
             align-items: center;
-            gap: 0.3rem;
+            gap: 0.5rem;
         }
 
         .btn-primary {
@@ -108,6 +110,7 @@
 
         .btn-primary:hover {
             background: var(--primary-dark);
+            transform: translateY(-2px);
         }
 
         .btn-secondary {
@@ -116,24 +119,25 @@
         }
 
         .btn-secondary:hover {
-            background: #2d3748;
+            background: #2d4060;
+            transform: translateY(-2px);
         }
 
         .loading-container {
             background: var(--bg-card);
             border-radius: var(--radius);
-            padding: 1.5rem;
+            padding: 2rem;
             text-align: center;
             box-shadow: var(--shadow);
-            margin-bottom: 1.5rem;
+            margin-bottom: var(--spacing);
         }
 
         .spinner {
-            width: 28px;
-            height: 28px;
-            margin: 0 auto 0.8rem;
-            border: 3px solid rgba(34, 197, 94, 0.3);
-            border-top: 3px solid var(--primary);
+            width: 40px;
+            height: 40px;
+            margin: 0 auto 1rem;
+            border: 4px solid rgba(34, 197, 94, 0.3);
+            border-top: 4px solid var(--primary);
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
@@ -147,37 +151,37 @@
             background: rgba(239, 68, 68, 0.1);
             border: 1px solid rgba(239, 68, 68, 0.3);
             border-radius: var(--radius);
-            padding: 1.5rem;
+            padding: 2rem;
             text-align: center;
-            margin-bottom: 1.5rem;
+            margin-bottom: var(--spacing);
             color: var(--danger);
         }
 
         .error-icon {
-            font-size: 2rem;
-            margin-bottom: 0.8rem;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
         }
 
         .table-container {
             background: var(--bg-card);
             border-radius: var(--radius);
             box-shadow: var(--shadow);
-            overflow-x: auto; /* Rolagem horizontal se necessário */
-            margin-bottom: 1.5rem;
+            overflow-x: auto;
+            margin-bottom: var(--spacing);
         }
 
         table {
             width: 100%;
             border-collapse: separate;
             border-spacing: 0;
-            font-size: 0.9rem;
-            min-width: 900px; /* Largura mínima para evitar corte */
+            font-size: var(--font-size-base);
+            min-width: 1200px; /* Largura mínima maior para suportar dados */
         }
 
         th {
             background: var(--bg-surface);
             color: var(--text-primary);
-            padding: 0.8rem 1rem;
+            padding: 1rem;
             text-align: left;
             font-weight: 600;
             border-bottom: 2px solid var(--border);
@@ -188,7 +192,7 @@
         }
 
         th:hover {
-            background: #2d3748;
+            background: #2d4060;
         }
 
         th.filtered {
@@ -197,27 +201,27 @@
         }
 
         td {
-            padding: 0.7rem 1rem;
+            padding: 1rem;
             border-bottom: 1px solid var(--border);
             vertical-align: middle;
             white-space: nowrap;
         }
 
         tbody tr:hover {
-            background: #1a202c;
+            background: rgba(45, 64, 96, 0.5);
         }
 
         .league-name {
             display: inline-flex;
             align-items: center;
-            gap: 0.3rem;
-            padding: 0.3rem 0.8rem;
+            gap: 0.5rem;
+            padding: 0.4rem 1rem;
             border-radius: 20px;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             font-weight: 600;
             color: #000000;
             background: #e5e7eb;
-            max-width: 100px; /* Limita largura para evitar estouro */
+            max-width: 150px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
@@ -225,47 +229,47 @@
         .team-match {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 1rem;
         }
 
         .team-name {
             font-weight: 500;
-            max-width: 120px;
+            max-width: 150px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
 
         .vs {
             color: var(--text-muted);
-            font-size: 0.75rem;
+            font-size: 0.9rem;
         }
 
         .date-time {
             display: flex;
             flex-direction: column;
-            gap: 0.1rem;
+            gap: 0.2rem;
         }
 
         .stat-pill {
             display: inline-block;
-            padding: 0.2rem 0.7rem;
+            padding: 0.3rem 1rem;
             border-radius: 12px;
-            font-size: 0.75rem;
-            font-weight: 500;
-            min-width: 40px;
+            font-size: 0.9rem;
+            font-weight: 600;
+            min-width: 50px;
             text-align: center;
         }
 
-        .positive-high { background: #10b981; color: white; }
+        .positive-high { background: var(--success); color: white; }
         .positive-medium { background: #34d399; color: white; }
         .positive-low { background: #6ee7b7; color: white; }
-        .neutral { background: #64748b; color: white; }
+        .neutral { background: var(--secondary); color: white; }
         .negative-low { background: #f87171; color: white; }
-        .negative-medium { background: #ef4444; color: white; }
+        .negative-medium { background: var(--danger); color: white; }
         .negative-high { background: #dc2626; color: white; }
 
         .top-match {
-            background: #1e293b;
+            background: rgba(30, 41, 74, 0.8);
             border-left: 4px solid var(--primary);
         }
 
@@ -277,12 +281,12 @@
 
         .tooltip .tooltiptext {
             visibility: hidden;
-            width: 120px;
+            width: 150px;
             background: var(--bg-surface);
             color: var(--text-primary);
             text-align: center;
             border-radius: var(--radius);
-            padding: 0.5rem;
+            padding: 0.6rem;
             position: absolute;
             z-index: 20;
             bottom: 125%;
@@ -290,7 +294,7 @@
             transform: translateX(-50%);
             opacity: 0;
             transition: opacity 0.2s;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             box-shadow: var(--shadow);
         }
 
@@ -308,9 +312,9 @@
             background: var(--bg-card);
             border-radius: var(--radius);
             box-shadow: var(--shadow);
-            padding: 1.2rem;
+            padding: 1.5rem;
             z-index: 1000;
-            max-width: 350px;
+            max-width: 400px;
             width: 90%;
         }
 
@@ -319,39 +323,40 @@
         }
 
         .filter-modal h3 {
-            font-size: 1rem;
-            margin-bottom: 0.8rem;
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
         }
 
         .filter-options {
-            max-height: 250px;
+            max-height: 300px;
             overflow-y: auto;
-            margin-bottom: 0.8rem;
+            margin-bottom: 1rem;
         }
 
         .filter-options label {
             display: flex;
             align-items: center;
-            gap: 0.4rem;
-            padding: 0.4rem;
+            gap: 0.6rem;
+            padding: 0.6rem;
         }
 
         .filter-options label:hover {
-            background: #2d3748;
+            background: #2d4060;
         }
 
         .filter-modal .buttons {
             display: flex;
-            gap: 0.4rem;
+            gap: 0.6rem;
             justify-content: flex-end;
         }
 
         .table-container::-webkit-scrollbar {
-            height: 6px;
+            width: 8px;
+            height: 8px;
         }
         .table-container::-webkit-scrollbar-thumb {
             background: var(--secondary);
-            border-radius: 3px;
+            border-radius: 4px;
         }
         .table-container::-webkit-scrollbar-track {
             background: var(--bg-card);
@@ -363,24 +368,53 @@
         .league-name[data-league="Esoccer GT Leagues – 12 mins play"] { background: #34d399; }
         .league-name[data-league="Esoccer Adriatic League - 10 mins play"] { background: #60a5fa; }
 
-        @media (max-width: 768px) {
+        @media (max-width: 1024px) {
             th, td {
-                padding: 0.5rem 0.7rem;
-                min-width: 80px;
+                padding: 0.8rem;
             }
 
             .league-name {
-                font-size: 0.7rem;
-                max-width: 80px;
+                max-width: 120px;
+                font-size: 0.85rem;
             }
 
             .team-name {
-                max-width: 80px;
+                max-width: 120px;
             }
 
             .stat-pill {
-                padding: 0.15rem 0.5rem;
-                min-width: 35px;
+                padding: 0.25rem 0.8rem;
+                font-size: 0.85rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            th, td {
+                padding: 0.6rem;
+                font-size: 0.9rem;
+            }
+
+            .league-name {
+                max-width: 100px;
+                font-size: 0.8rem;
+            }
+
+            .team-name {
+                max-width: 100px;
+            }
+
+            .stat-pill {
+                padding: 0.2rem 0.6rem;
+                font-size: 0.8rem;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            .btn {
+                padding: 0.6rem 1rem;
+                font-size: 0.9rem;
             }
         }
     </style>
