--- a/over.html
+++ b/over.html
@@ -8,8 +8,8 @@
     <style>
         :root {
             --primary: #10b981;
-            --bg-primary: #0a0e1a;
-            --bg-card: #1a1f35;
+            --bg-primary: #000000;
+            --bg-card: #000000;
             --text-primary: #f9fafb;
             --text-muted: #9ca3af;
             --border: #374151;
@@ -164,7 +164,7 @@
         }
 
         th {
-            background: #1f2937;
+            background: #000000;
             color: var(--text-muted);
             padding: 0.75rem;
             text-align: left;
@@ -192,7 +192,7 @@
         }
 
         tbody tr:hover {
-            background: rgba(16, 185, 129, 0.05);
+            background: rgba(0, 0, 0, 0.05);
         }
 
         .league-name {
