--- a/radar.html
+++ b/radar.html
@@ -474,19 +474,20 @@
 
             async function fetchAllGames() {
                 let games = [];
-                let page = 1;
-                let hasMore = true;
-                while (hasMore) {
+                const maxPages = 5;
+                for (let page = 1; page <= maxPages; page++) {
                     try {
                         const response = await fetch(`https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=${page}`);
                         if (!response.ok) throw new Error('Erro na API');
                         const data = await response.json();
-                        games = games.concat(data.data);
-                        hasMore = page < data.pagination.totalPages; // Continua até a última página
-                        page++;
+                        if (data.data && data.data.length > 0) {
+                            games = games.concat(data.data);
+                        } else {
+                            break; // Para se não houver mais dados
+                        }
                     } catch (error) {
                         console.error(`Erro na página ${page}:`, error);
-                        hasMore = false;
+                        break;
                     }
                 }
                 return games;
@@ -684,7 +685,7 @@
                                 data: [topPlayer.winRate, topPlayer.avgScored * 10, topPlayer.avgConceded * 10, topPlayer.over2_5Rate, topPlayer.bttsRate],
                                 fill: true,
                                 backgroundColor: 'rgba(0, 255, 136, 0.2)',
-                                borderColor: 'var(--accent-color)',
+                                borderColor: 'var(--accent-color)'
                             }]
                         },
                         options: { scale: { ticks: { beginAtZero: true } } }
@@ -753,7 +754,7 @@
                         datasets: [{
                             label: 'Média Gols/Jogo',
                             data: leaguesList.map(l => l.avgGoals),
-                            backgroundColor: 'rgba(0, 255, 136, 0.8)'
+                            backgroundColor: 'var(--accent-color)'
                         }]
                     },
                     options: { scales: { y: { beginAtZero: true } } }
@@ -792,7 +793,6 @@
             sortMetricMatches.addEventListener('change', renderMatchesTable);
             sortOrderMatches.addEventListener('change', renderMatchesTable);
         });
-
     </script>
 </body>
 </html>
