--- a/radar.html
+++ b/radar.html
@@ -61,6 +61,21 @@
             color: transparent;
         }
 
+        .back-button {
+            padding: 10px 20px;
+            background: var(--card-bg);
+            border: none;
+            border-radius: 8px;
+            color: var(--accent);
+            cursor: pointer;
+            transition: background 0.3s;
+            margin-left: auto;
+        }
+
+        .back-button:hover {
+            background: rgba(0, 255, 136, 0.2);
+        }
+
         .content {
             padding: 90px 20px 20px;
             max-width: 1400px;
@@ -295,6 +310,7 @@
     <header class="header">
         <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="Logo" class="logo-img">
         <h2 class="logo-text">👑 RW TIPS 🎮</h2>
+        <button class="back-button" onclick="window.location.href='visualization.html'">Voltar</button>
     </header>
 
     <div class="content">
@@ -679,8 +695,8 @@
                 trends.push({
                     title: '💥 Confrontos Mais Voláteis',
                     content: volatile.map(m => 
-                        `<strong>${m.key}</strong>: ${m.volatility.toFixed(2)} volatilidade - Últimos: ${m.lastScores}`
-                    ).join('<br>')
+                        `<strong>💠 ${m.key}</strong>: ${m.volatility.toFixed(2)} volatilidade - Últimos: ${m.lastScores || 'N/A'}<br><br>`
+                    ).join('')
                 });
             }
 
@@ -707,8 +723,8 @@
                 trends.push({
                     title: '🦓 Zebras em Ascensão',
                     content: upsets.slice(0, 5).map(u => 
-                        `<strong>${u.key}</strong>: ${u.trend}`
-                    ).join('<br>')
+                        `<strong>${u.key}</strong>: ${u.trend}<br><br>`
+                    ).join('')
                 });
             }
 
@@ -725,8 +741,8 @@
                 trends.push({
                     title: '⚔️ Ligas Ultra-Ofensivas',
                     content: offensiveLeagues.slice(0, 3).map(([name, stats]) => 
-                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - Over 2.5: ${stats.over25Rate}%`
-                    ).join('<br>')
+                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - Over 2.5: ${stats.over25Rate}%<br><br>`
+                    ).join('')
                 });
             }
 
@@ -734,8 +750,8 @@
                 trends.push({
                     title: '🛡️ Ligas Defensivas',
                     content: defensiveLeagues.slice(0, 3).map(([name, stats]) => 
-                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - BTTS: ${stats.bttsRate}%`
-                    ).join('<br>')
+                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - BTTS: ${stats.bttsRate}%<br><br>`
+                    ).join('')
                 });
             }
 
@@ -762,8 +778,8 @@
                 trends.push({
                     title: '🔥 Jogadores em Sequência',
                     content: hotStreaks.map(h => 
-                        `<strong>${h.player}</strong> (${h.league}): ${h.streak} vitórias seguidas - ${h.avgGoals} gols/jogo`
-                    ).join('<br>')
+                        `<strong>${h.player}</strong> (${h.league}): ${h.streak} vitórias seguidas - ${h.avgGoals} gols/jogo<br><br>`
+                    ).join('')
                 });
             }
 
