--- a/radar.html
+++ b/radar.html
@@ -741,7 +741,7 @@
                 trends.push({
                     title: '⚔️ Ligas Ultra-Ofensivas',
                     content: offensiveLeagues.slice(0, 3).map(([name, stats]) => 
-                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - Over 2.5: ${stats.over25Rate}%<br><br>`
+                        `💠<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - Over 2.5: ${stats.over25Rate}%<br><br>`
                     ).join('')
                 });
             }
@@ -750,7 +750,7 @@
                 trends.push({
                     title: '🛡️ Ligas Defensivas',
                     content: defensiveLeagues.slice(0, 3).map(([name, stats]) => 
-                        `<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - BTTS: ${stats.bttsRate}%<br><br>`
+                        `💠<strong>${name}</strong>: ${stats.avgGoalsFT} gols/jogo - BTTS: ${stats.bttsRate}%<br><br>`
                     ).join('')
                 });
             }
